--- a/download_learn.ipynb
+++ b/download_learn.ipynb
@@ -8,14 +8,21 @@
    "source": [
     "# Configuration\n",
     "from dotenv import dotenv_values\n",
+    "\n",
     "config = dotenv_values(\".env\")\n",
     "\n",
-    "json_filename = f\"{config['LEARN_COURSE_ID']}.json\"\n",
+    "import os\n",
+    "\n",
+    "os.makedirs(config[\"COURSE_DATA_DIR\"], exist_ok=True)\n",
+    "json_filename = f\"{config['LEARN_API_COURSE_ID']}.json\"\n",
+    "course_json_path = os.path.join(config[\"COURSE_DATA_DIR\"], json_filename)\n",
     "\n",
     "# https://developer.blackboard.com/portal/displayApi\n",
     "api_token = f\"{config['LEARN_API_URL']}/v1/oauth2/token\"\n",
-    "api_course = f\"{config['LEARN_API_URL']}/v3/courses/courseId:{config['LEARN_COURSE_ID']}\"\n",
-    "api_course_content = f\"{config['LEARN_API_URL']}/v1/courses/courseId:{config['LEARN_COURSE_ID']}/contents\"\n",
+    "api_course = (\n",
+    "    f\"{config['LEARN_API_URL']}/v3/courses/courseId:{config['LEARN_API_COURSE_ID']}\"\n",
+    ")\n",
+    "api_course_content = f\"{config['LEARN_API_URL']}/v1/courses/courseId:{config['LEARN_API_COURSE_ID']}/contents\"\n",
     "api_course_content_children = lambda id: f\"{api_course_content}/{id}/children\""
    ]
   },
@@ -29,9 +36,13 @@
     "from oauthlib.oauth2 import BackendApplicationClient\n",
     "from requests_oauthlib import OAuth2Session\n",
     "\n",
-    "client = BackendApplicationClient(client_id=config['LEARN_CLIENT_ID'])\n",
+    "client = BackendApplicationClient(client_id=config[\"LEARN_API_CLIENT_ID\"])\n",
     "with OAuth2Session(client=client, auto_refresh_url=api_token) as session:\n",
-    "    token = session.fetch_token(token_url=api_token, client_id=config['LEARN_CLIENT_ID'], client_secret=config['LEARN_CLIENT_SECRET'])"
+    "    token = session.fetch_token(\n",
+    "        token_url=api_token,\n",
+    "        client_id=config[\"LEARN_API_CLIENT_ID\"],\n",
+    "        client_secret=config[\"LEARN_API_CLIENT_SECRET\"],\n",
+    "    )"
    ]
   },
   {
@@ -51,13 +62,21 @@
    "outputs": [],
    "source": [
     "# Download course content JSON\n",
-    "course_content = session.get(api_course_content).json()['results']\n",
+    "course_content = session.get(api_course_content).json()[\"results\"]\n",
+    "\n",
     "\n",
     "def get_children_recursively(element):\n",
-    "    if 'children' not in element and 'hasChildren' in element and element['hasChildren'] == True:\n",
-    "        element['children'] = session.get(api_course_content_children(element['id'])).json()['results']\n",
-    "        for child in element['children']:\n",
+    "    if (\n",
+    "        \"children\" not in element\n",
+    "        and \"hasChildren\" in element\n",
+    "        and element[\"hasChildren\"] == True\n",
+    "    ):\n",
+    "        element[\"children\"] = session.get(\n",
+    "            api_course_content_children(element[\"id\"])\n",
+    "        ).json()[\"results\"]\n",
+    "        for child in element[\"children\"]:\n",
     "            get_children_recursively(child)\n",
+    "\n",
     "\n",
     "for element in course_content:\n",
     "    get_children_recursively(element)"
@@ -72,9 +91,9 @@
     "# Write course details and content JSON to local file\n",
     "from json import dump\n",
     "\n",
-    "course_json = { 'details': course_details, 'content': course_content }\n",
+    "course_json = {\"details\": course_details, \"content\": course_content}\n",
     "\n",
-    "with open(file=json_filename, mode=\"w\", encoding=\"utf-8\") as f:\n",
+    "with open(file=course_json_path, mode=\"w\", encoding=\"utf-8\") as f:\n",
     "    dump(course_json, f, ensure_ascii=False)"
    ]
   }
