--- a/upload_drupal_group.ipynb
+++ b/upload_drupal_group.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "# Configuration\n",
     "from dotenv import dotenv_values\n",
+    "\n",
     "config = dotenv_values(\".env\")\n",
     "\n",
     "json_filename = f\"{config['LEARN_COURSE_ID']}.json\"\n",
@@ -18,7 +19,9 @@
     "api_type_course = \"group--course\"\n",
     "api_course_weeks = f\"{config['DRUPAL_API_URL']}/node/course_week\"\n",
     "api_type_course_week = \"node--course_week\"\n",
-    "api_course_week_relationship = f\"{config['DRUPAL_API_URL']}/group_relationship/course-group_node-course_week\"\n",
+    "api_course_week_relationship = (\n",
+    "    f\"{config['DRUPAL_API_URL']}/group_relationship/course-group_node-course_week\"\n",
+    ")\n",
     "api_type_course_week_relationship = \"group_relationship--course-group_node-course_week\""
    ]
   },
@@ -32,11 +35,13 @@
     "from requests import session\n",
     "\n",
     "with session() as session:\n",
-    "    session.auth = (config['DRUPAL_USERNAME'], config['DRUPAL_PASSWORD'])\n",
-    "    session.headers.update({\n",
-    "        \"Accept\": \"application/vnd.api+json\",\n",
-    "        \"Content-Type\": \"application/vnd.api+json\",\n",
-    "    })"
+    "    session.auth = (config[\"DRUPAL_USERNAME\"], config[\"DRUPAL_PASSWORD\"])\n",
+    "    session.headers.update(\n",
+    "        {\n",
+    "            \"Accept\": \"application/vnd.api+json\",\n",
+    "            \"Content-Type\": \"application/vnd.api+json\",\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -63,7 +68,7 @@
     "    # if isinstance(item, str):\n",
     "    #     results.append(item)\n",
     "    #     return\n",
-    "    if not item['availability']['available'] == \"Yes\":\n",
+    "    if not item[\"availability\"][\"available\"] == \"Yes\":\n",
     "        return\n",
     "\n",
     "    if \"body\" not in item:\n",
@@ -71,10 +76,10 @@
     "    else:\n",
     "        if \"title\" in item:\n",
     "            results.append(f\"<h3>{item['title']}</h3>\")\n",
-    "        results.append(item['body'])\n",
+    "        results.append(item[\"body\"])\n",
     "\n",
-    "    if \"hasChildren\" in item and item['hasChildren'] == True:\n",
-    "        for child in item['children']:\n",
+    "    if \"hasChildren\" in item and item[\"hasChildren\"] == True:\n",
+    "        for child in item[\"children\"]:\n",
     "            visit_children_recursively(results, child)"
    ]
   },
@@ -87,8 +92,8 @@
     "# Make course description out of Welcome and Course Information items\n",
     "desc_items = []\n",
     "\n",
-    "for root_item in course_json['content']:\n",
-    "    if root_item['title'] == \"Welcome\" or root_item['title'] == \"Course Information\":\n",
+    "for root_item in course_json[\"content\"]:\n",
+    "    if root_item[\"title\"] == \"Welcome\" or root_item[\"title\"] == \"Course Information\":\n",
     "        visit_children_recursively(desc_items, root_item)\n",
     "\n",
     "course_description = \"<br>\".join(desc_items)"
@@ -102,24 +107,30 @@
    "source": [
     "# Create new course page\n",
     "from json import dumps\n",
-    "res = session.post(api_courses, data=dumps({\n",
-    "    \"data\": {\n",
-    "        \"type\": api_type_course,\n",
-    "        \"attributes\": {\n",
-    "            \"label\": course_json['details']['name'],\n",
-    "            \"field_course_summary\": {\n",
-    "                \"value\": f\"<p>{course_json['details']['courseId']}</p>\",\n",
-    "                \"format\": \"basic_html\",\n",
-    "            },\n",
-    "            \"field_description\": {\n",
-    "                \"value\": course_description,\n",
-    "                \"format\": \"full_html\",\n",
-    "                \"summary\": \"\"\n",
-    "            },\n",
+    "\n",
+    "res = session.post(\n",
+    "    api_courses,\n",
+    "    data=dumps(\n",
+    "        {\n",
+    "            \"data\": {\n",
+    "                \"type\": api_type_course,\n",
+    "                \"attributes\": {\n",
+    "                    \"label\": course_json[\"details\"][\"name\"],\n",
+    "                    \"field_course_summary\": {\n",
+    "                        \"value\": f\"<p>{course_json['details']['courseId']}</p>\",\n",
+    "                        \"format\": \"basic_html\",\n",
+    "                    },\n",
+    "                    \"field_description\": {\n",
+    "                        \"value\": course_description,\n",
+    "                        \"format\": \"full_html\",\n",
+    "                        \"summary\": \"\",\n",
+    "                    },\n",
+    "                },\n",
+    "            }\n",
     "        }\n",
-    "    }\n",
-    "}))\n",
-    "course_uuid = res.json()['data']['id']"
+    "    ),\n",
+    ")\n",
+    "course_uuid = res.json()[\"data\"][\"id\"]"
    ]
   },
   {
@@ -130,20 +141,22 @@
    "source": [
     "# Make course pages out of Course Materials items\n",
     "materials_root_item = None\n",
-    "for root_item in course_json['content']:\n",
-    "    if root_item['title'] == \"Course Materials\":\n",
+    "for root_item in course_json[\"content\"]:\n",
+    "    if root_item[\"title\"] == \"Course Materials\":\n",
     "        materials_root_item = root_item\n",
     "        break\n",
     "\n",
     "all_materials_items = []\n",
-    "for materials_item in materials_root_item['children']:\n",
+    "for materials_item in materials_root_item[\"children\"]:\n",
     "    subset_materials_items = []\n",
     "    visit_children_recursively(subset_materials_items, materials_item)\n",
     "    if len(subset_materials_items):\n",
-    "        all_materials_items.append({\n",
-    "            'title': materials_item['title'],\n",
-    "            'content': \"<br>\".join(subset_materials_items)\n",
-    "        })"
+    "        all_materials_items.append(\n",
+    "            {\n",
+    "                \"title\": materials_item[\"title\"],\n",
+    "                \"content\": \"<br>\".join(subset_materials_items),\n",
+    "            }\n",
+    "        )"
    ]
   },
   {
@@ -184,53 +197,63 @@
     "# Create course week pages and attach them to course\n",
     "for materials_item in all_materials_items:\n",
     "    # First create the course week page\n",
-    "    res = session.post(api_course_weeks, data=dumps({\n",
-    "        \"data\": {\n",
-    "            \"type\": api_type_course_week,\n",
-    "            \"attributes\": {\n",
-    "                \"title\": materials_item['title'],\n",
-    "                \"body\": {\n",
-    "                    \"value\": materials_item['content'],\n",
-    "                    \"format\": \"full_html\",\n",
-    "                    \"summary\": \"\",\n",
-    "                },\n",
-    "            },\n",
-    "            \"relationships\": {\n",
-    "                \"field_back_to_course\": {\n",
-    "                    \"data\": { \n",
-    "                        \"type\": api_type_course,\n",
-    "                        \"id\": course_uuid,\n",
+    "    res = session.post(\n",
+    "        api_course_weeks,\n",
+    "        data=dumps(\n",
+    "            {\n",
+    "                \"data\": {\n",
+    "                    \"type\": api_type_course_week,\n",
+    "                    \"attributes\": {\n",
+    "                        \"title\": materials_item[\"title\"],\n",
+    "                        \"body\": {\n",
+    "                            \"value\": materials_item[\"content\"],\n",
+    "                            \"format\": \"full_html\",\n",
+    "                            \"summary\": \"\",\n",
+    "                        },\n",
     "                    },\n",
-    "                },\n",
-    "            },\n",
-    "        }\n",
-    "    }))\n",
+    "                    \"relationships\": {\n",
+    "                        \"field_back_to_course\": {\n",
+    "                            \"data\": {\n",
+    "                                \"type\": api_type_course,\n",
+    "                                \"id\": course_uuid,\n",
+    "                            },\n",
+    "                        },\n",
+    "                    },\n",
+    "                }\n",
+    "            }\n",
+    "        ),\n",
+    "    )\n",
     "    print(f\"Added {materials_item['title']}\")\n",
-    "    course_week_uuid = res.json()['data']['id']\n",
+    "    course_week_uuid = res.json()[\"data\"][\"id\"]\n",
     "\n",
     "    # Then create a relationship linking the new course week page to the course group\n",
-    "    res = session.post(api_course_week_relationship, data=dumps({\n",
-    "        \"data\": {\n",
-    "            \"type\": api_type_course_week_relationship,\n",
-    "            \"attributes\": {\n",
-    "                \"label\": all_materials_items[1]['title'],\n",
-    "            },\n",
-    "            \"relationships\": {\n",
-    "                'entity_id': {\n",
-    "                    'data': {\n",
-    "                        'type': api_type_course_week,\n",
-    "                        'id': course_week_uuid,\n",
-    "                    }\n",
-    "                },\n",
-    "                'gid': {\n",
-    "                    'data': {\n",
-    "                        'type': api_type_course,\n",
-    "                        'id': course_uuid,\n",
-    "                    }\n",
-    "                },\n",
-    "            },\n",
-    "        }\n",
-    "    }))\n",
+    "    res = session.post(\n",
+    "        api_course_week_relationship,\n",
+    "        data=dumps(\n",
+    "            {\n",
+    "                \"data\": {\n",
+    "                    \"type\": api_type_course_week_relationship,\n",
+    "                    \"attributes\": {\n",
+    "                        \"label\": all_materials_items[1][\"title\"],\n",
+    "                    },\n",
+    "                    \"relationships\": {\n",
+    "                        \"entity_id\": {\n",
+    "                            \"data\": {\n",
+    "                                \"type\": api_type_course_week,\n",
+    "                                \"id\": course_week_uuid,\n",
+    "                            }\n",
+    "                        },\n",
+    "                        \"gid\": {\n",
+    "                            \"data\": {\n",
+    "                                \"type\": api_type_course,\n",
+    "                                \"id\": course_uuid,\n",
+    "                            }\n",
+    "                        },\n",
+    "                    },\n",
+    "                }\n",
+    "            }\n",
+    "        ),\n",
+    "    )\n",
     "    print(f\"Connected new course week to {course_json['details']['name']}\")\n",
     "    # With Drupal 10.0.9 + Group 3.1.0 module, the attaching step doesn't work\n",
     "    # It fails with HTTP 500 error: Drupal\\\\group\\\\Plugin\\\\Group\\\\RelationHandler\\\\EmptyAccessControl::relationshipCreateAccess(): Argument #1 ($group) must be of type Drupal\\\\group\\\\Entity\\\\GroupInterface, null given, called in drupal\\\\modules\\\\contrib\\\\group\\\\src\\\\Entity\\\\Access\\\\GroupRelationshipAccessControlHandler.php on line 61\n",
